force-app/main/default/objects/CJFW_ExcludedProductCategory__c/CJFW_ExcludedProductCategory__c.object-meta.xml
<CustomObject>
    <description>[P2] - 매출/채권 - 약정감가 - 제외 상품군(Item)</description>
    <label>Excluded Product Category</label>
    <nameField>
        <displayFormat>SQ{YY}{MM}{DD}{000000}</displayFormat>
        <label>Auto No.</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>