force-app/main/default/objects/CJFW_ExcludedProductCategory__c/fields/ContractDepreciationRequest__c.field-meta.xml
<CustomField>
    <fullName>ContractDepreciationRequest__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>약정 감가 신청</description>
    <label>Contract Depreciation Request</label>
    <referenceTo>CJFW_ContractDepreciationRequest__c</referenceTo>
    <relationshipLabel>Excluded Product Category</relationshipLabel>
    <relationshipName>Excluded_Product_Category</relationshipName>
    <type>Lookup</type>
</CustomField>