force-app/main/default/objects/CJFW_ExcludedProductCategory__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>고객사</description>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Excluded Product Category</relationshipLabel>
    <relationshipName>Excluded_Product_Category</relationshipName>
    <type>Lookup</type>
</CustomField>