force-app/main/default/objects/CJFW_ExcludedProductCategory__c/fields/FM_CodeCustomer__c.field-meta.xml
<CustomField>
    <fullName>FM_CodeCustomer__c</fullName>
    <formula>&quot;(&quot; + Customer__r.CustomerID__c + &quot;) &quot; + HYPERLINK( Customer__c , Customer__r.Name )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>(Code) Customer</label>
    <type>Text</type>
</CustomField>