force-app/main/default/objects/CJFW_ExcludedProductCategory__c/fields/FM_CodeProductCategory__c.field-meta.xml
<CustomField>
    <fullName>FM_CodeProductCategory__c</fullName>
    <formula>&quot;(&quot; + ProductCategory__r.gd_cls_id__c  + &quot;) &quot; + HYPERLINK( ProductCategory__c , ProductCategory__r.Name )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>(Code) Product Category</label>
    <type>Text</type>
</CustomField>