force-app/main/default/objects/CJFW_ExcludedProductCategory__c/fields/ProductCategory__c.field-meta.xml
<CustomField>
    <fullName>ProductCategory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Item</description>
    <label>Product Category</label>
    <referenceTo>ProductCategory__c</referenceTo>
    <relationshipLabel>Excluded Product Category</relationshipLabel>
    <relationshipName>Excluded_Product_Category</relationshipName>
    <type>Lookup</type>
</CustomField>